--- a/public/rs/css/bootstrap.css
+++ b/public/rs/css/bootstrap.css
@@ -1886,13 +1886,13 @@ textarea.form-control-lg {
   filter: brightness(90%); }
 
 .form-check-input:focus {
-  border-color: #7367f0;
+  border-color: #26a69a;
   outline: 0;
-  box-shadow: 0 2px 4px 0 rgba(115, 103, 240, 0.4); }
+  box-shadow: 0 2px 4px 0 rgba(38, 166, 154, 0.4); }
 
 .form-check-input:checked {
-  background-color: #7367f0;
-  border-color: #7367f0; }
+  background-color: #26a69a;
+  border-color: #26a69a; }
 
 .form-check-input:checked[type="checkbox"] {
   background-image: url("data:image/svg+xml;charset=utf8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 9.5 7.5'%3e%3cpolyline points='0.75 4.35 4.18 6.75 8.75 0.75' style='fill:none;stroke:%23fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:1.5px'/%3e%3c/svg%3e"); }
