--- a/public/rs/css/colors.css
+++ b/public/rs/css/colors.css
@@ -411,13 +411,13 @@ input:focus ~ .bg-light {
   transform: translateY(3px); }
 
 .btn-outline-primary {
-  border: 1px solid #7367f0 !important;
+  border: 1px solid #26a69a !important;
   background-color: transparent;
-  color: #7367f0; }
+  color: #26a69a; }
 
 .btn-outline-primary:hover:not(.disabled):not(:disabled) {
   background-color: rgba(115, 103, 240, 0.04);
-  color: #7367f0; }
+  color: #26a69a; }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus {
   box-shadow: none; }
