--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,10 +1,12 @@
 .title-edit,
-.title-delete{
+.title-delete,
+.title-detalle{
     position: relative;
 }
 
 .title-edit:hover::before,
-.title-delete:hover::before{
+.title-delete:hover::before,
+.title-detalle:hover::before{
     content: '';
     background-color: #202124f3;
     color: #fff;
@@ -21,13 +23,21 @@
     pointer-events: none;
 }
 tbody tr:last-child td button.title-edit:hover::before,
-tbody tr:last-child td button.title-delete:hover::before{
+tbody tr:last-child td button.title-delete:hover::before,
+tbody tr:last-child td button.title-detalle:hover::before{
     bottom: 2.9rem;
 }
 
 .title-edit:hover::before{
     content: 'Editar';
 }
+
+.title-detalle:hover::before{
+    content: 'Detalle venta';
+    width: 7rem;
+    left: -2.3rem;
+}
+
 .title-delete:hover::before{
     content: 'Eliminar';
     width: 5rem;
@@ -35,7 +45,8 @@ tbody tr:last-child td button.title-delete:hover::before{
 }
 
 .title-edit:hover::after,
-.title-delete:hover::after{
+.title-delete:hover::after,
+.title-detalle:hover::after{
     content: '';
     position: absolute;
     left: calc(50% - .5rem);
@@ -50,7 +61,8 @@ tbody tr:last-child td button.title-delete:hover::before{
 }
 
 tbody tr:last-child td button.title-edit:hover::after,
-tbody tr:last-child td button.title-delete:hover::after{
+tbody tr:last-child td button.title-delete:hover::after,
+tbody tr:last-child td button.title-detalle:hover::after{
     transform: rotate(180deg);
     bottom: 1.9rem;
 }
@@ -183,4 +195,26 @@ tbody tr:last-child td button.title-delete:hover::after{
     right: -8px;
     top: 0;
     font-weight: 500;
+}
+
+/** Loading **/
+
+.rotate{
+    animation: rotation 2s infinite linear;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -25px 0 0 -25px;
+}
+.rotate i{
+    color: var(--primary);
+}
+
+@keyframes rotation {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(359deg);
+    }
 }
