--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -48,7 +48,7 @@ tbody tr:last-child td button.title-pdf:hover::before{
 }
 
 .title-pdf:hover::before{
-    content: 'Ver pdf';
+    content: 'Ver factura';
     width: 7rem;
     left: -2.3rem;
 }
